--- a/batchsite_config.json
+++ b/batchsite_config.json
@@ -1,50 +1,26 @@
 [
   {
     "domain": "www.123.com",
-    "second_domain": "123.com"
+    "second_domain": "123.com",
+    "datauser": "www_123_com",
+    "datapassword": "www_123_com",
+    "ftp_username": "www_123_com",
+    "ftp_password": "www_123_com"
   },
-  {
+    {
     "domain": "www.234.com",
-    "second_domain": "234.com"
+    "second_domain": "234.com",
+    "datauser": "www_234_com",
+    "datapassword": "www_234_com",
+    "ftp_username": "www_234_com",
+    "ftp_password": "www_234_com"
   },
-  {
+    {
     "domain": "www.345.com",
-    "second_domain": "345.com"
-  },
-  {
-    "domain": "www.567.com",
-    "second_domain": "567.com"
-  },
-  {
-    "domain": "www.678.com",
-    "second_domain": "678.com"
-  },
-  {
-    "domain": "www.789.com",
-    "second_domain": "789.com"
-  },
-  {
-    "domain": "www.123.com",
-    "second_domain": "123.com"
-  },
-  {
-    "domain": "www.456.com",
-    "second_domain": "456.com"
-  },
-  {
-    "domain": "www.789.com",
-    "second_domain": "789.com"
-  },
-  {
-    "domain": "www.123.com",
-    "second_domain": "123.com"
-  },
-  {
-    "domain": "www.456.com",
-    "second_domain": "456.com"
-  },
-  {
-    "domain": "www.789.com",
-    "second_domain": "789.com"
+    "second_domain": "345.com",
+    "datauser": "www_345_com",
+    "datapassword": "www_345_com",
+    "ftp_username": "www_345_com",
+    "ftp_password": "www_345_com"
   }
 ]
